Atualizações no projeto WebFamilyNews

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "server=metro.proxy.rlwy.net;port=34258;database=railway;user=root;password=ycNUIyTaVDGTZrLHEJTddTxOmduypDVS"
-  },
-
-
-  "AllowedHosts": "*"
+  "ApiSettings": {
+    "BaseUrl": "https://webfamilyhomeapi-production.up.railway.app/"
+  }
 }
