Atualização: descrição da modificação feita

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=shuttle.proxy.rlwy.net;Port=19284;Database=railway;User=root;Password=omyCptekxaQcLvMTSfcysBCujSHBzwzi;"
+    "DefaultConnection": ""
   }
 }
